--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 </head>
 <body>
 <div class="container">
+    <img src="images/printpallogo.png" alt="logo" class="logo">
 
+    <form action="">
+        <label for="fmessage"><b>Write your message!</b></label>
+        <input type="text" id="fmessage" name="fmessage"><br><br>
+        <input type="submit" value="Submit">
+    </form>
 </div>
 <script src="js/scripts.js" type="text/javascript"></script>
 </body>
