--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
 <div class="container">
     <img src="images/printpallogo.png" alt="logo" class="logo">
 
-    <form action="">
-        <label for="fmessage"><b>Write your message!</b></label>
-        <input type="text" id="fmessage" name="fmessage"><br><br>
-        <input type="submit" value="Submit">
-    </form>
+<!--    <form action="">-->
+<!--        <label for="fmessage"><b>Write your message!</b></label>-->
+<!--        <input type="text" id="fmessage" name="fmessage"><br><br>-->
+<!--        <input type="submit" value="Submit">-->
+<!--    </form>-->
+
+    <label class="mdc-text-field mdc-text-field--filled">
+        <span class="mdc-text-field__ripple"></span>
+        <span class="mdc-floating-label" id="my-label-id">Hint text</span>
+        <input class="mdc-text-field__input" type="text" aria-labelledby="my-label-id">
+        <span class="mdc-line-ripple"></span>
+    </label>
+
 </div>
 <script src="js/scripts.js" type="text/javascript"></script>
 </body>
