--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
+    <!--    Bootstrap icons inladen-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-    <!--    Google icoontjes inladen-->
+    <!--    Google icons inladen-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!--    Material inladen-->
@@ -38,11 +40,16 @@
         </button>
     </form>
 </div>
+
 <script src="js/scripts.js" type="text/javascript"></script>
 <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
 <script>
     const textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
     const helperText = new mdc.textField.MDCTextFieldHelperText(document.querySelector('.mdc-text-field-helper-text'));
 </script>
+
+<footer>
+    <p><b>Printpal ©2022</b><br>Baldur van Helvoirt • Mette Ghijsen • Maarten Kasdorp • Wendela Quist</p>
+</footer>
 </body>
 </html>
