--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 <body>
 <div class="container">
     <img src="images/printpallogo.png" alt="logo" class="logo">
-        <label class="mdc-text-field messageForm">
-            <span class="mdc-text-field__ripple"></span>
-            <input type="text" class="mdc-text-field__input" aria-labelledby="my-label" id="messageForm">
-            <span class="mdc-floating-label" id="my-label">Type your message</span>
-            <span class="mdc-line-ripple"></span>
-        </label>
+    <label class="mdc-text-field messageForm">
+        <span class="mdc-text-field__ripple"></span>
+        <input type="text" class="mdc-text-field__input" aria-labelledby="my-label" id="messageForm">
+        <span class="mdc-floating-label" id="my-label">Type your message</span>
+        <span class="mdc-line-ripple"></span>
+    </label>
 
-        <button class="mdc-button mdc-button--raised mdc-button--leading sendbutton" id="sendbutton">
-            <span class="mdc-button__ripple"></span>
-            <i class="material-icons mdc-button__icon" aria-hidden="true">send</i>
-            <span class="mdc-button__label">Send</span>
-        </button>
+    <button class="mdc-button mdc-button--raised mdc-button--leading sendbutton" id="sendbutton">
+        <span class="mdc-button__ripple"></span>
+        <i class="material-icons mdc-button__icon" aria-hidden="true">send</i>
+        <span class="mdc-button__label">Send</span>
+    </button>
 </div>
 
 <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
@@ -48,7 +48,36 @@
 </script>
 
 <footer>
-    <p><b>Printpal ©2022</b><br>Baldur van Helvoirt • Mette Ghijsen • Maarten Kasdorp • Wendela Quist</p>
+    <!--    <p><b>Printpal ©2022</b><br>Baldur van Helvoirt • Mette Ghijsen • Maarten Kasdorp • Wendela Quist</p>-->
+    <div class="taskbar-icons">
+        <div class="home-icon">
+            <p>
+                <i class="material-icons">home</i>
+            </p>
+        </div>
+        <div class="chat-icon">
+            <p>
+                <i class="material-icons">chat</i>
+            </p>
+        </div>
+        <div class="mdc-touch-target-wrapper">
+            <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
+                <div class="mdc-fab__ripple"></div>
+                <span class="material-icons mdc-fab__icon">add</span>
+                <div class="mdc-fab__touch"></div>
+            </button>
+        </div>
+        <div class="settings-icon">
+            <p>
+                <i class="material-icons">settings</i>
+            </p>
+        </div>
+        <div class="account-icon">
+            <p>
+                <i class="material-icons">account_circle</i>
+            </p>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
