Taakbalk gemaakt met behulp van Material Design componenten

--- a/index.html
+++ b/index.html
@@ -48,7 +48,36 @@
 </script>
 
 <footer>
-    <p><b>Printpal ©2022</b><br>Baldur van Helvoirt • Mette Ghijsen • Maarten Kasdorp • Wendela Quist</p>
+    <!--    <p><b>Printpal ©2022</b><br>Baldur van Helvoirt • Mette Ghijsen • Maarten Kasdorp • Wendela Quist</p>-->
+    <div class="taskbar-icons">
+        <div class="home-icon">
+            <p>
+                <i class="material-icons">home</i>
+            </p>
+        </div>
+        <div class="chat-icon">
+            <p>
+                <i class="material-icons">chat</i>
+            </p>
+        </div>
+        <div class="mdc-touch-target-wrapper">
+            <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
+                <div class="mdc-fab__ripple"></div>
+                <span class="material-icons mdc-fab__icon">add</span>
+                <div class="mdc-fab__touch"></div>
+            </button>
+        </div>
+        <div class="settings-icon">
+            <p>
+                <i class="material-icons">settings</i>
+            </p>
+        </div>
+        <div class="account-icon">
+            <p>
+                <i class="material-icons">account_circle</i>
+            </p>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
