--- a/login.html
+++ b/login.html
@@ -48,10 +48,12 @@
             <span class="mdc-button__label">Login</span>
         </button>
 
+        <a href="signup.html">
         <button class="mdc-button mdc-button--outlined signup-button">
             <span class="mdc-button__ripple"></span>
             <span class="mdc-button__label">Sign up</span>
         </button>
+        </a>
     </div>
 </div>
 
