--- a/signup.html
+++ b/signup.html
@@ -20,39 +20,36 @@
 
   <link rel="icon" href="images/printpal512icon.png">
   <title>Printpal</title>
-
-  <script type="module" src="js/scripts.js"></script>
-
 </head>
 <body>
 <div class="container">
   <img src="images/printpallogo.png" alt="logo" class="logo">
 
-  <div class="mdc-text-field mdc-text-field--with-leading-icon login-textfield">
+  <div class="mdc-text-field mdc-text-field--with-leading-icon username-textfield textfield">
     <i class="material-icons mdc-text-field__icon" tabindex="0" role="button">person</i>
     <input type="text" id="username" class="mdc-text-field__input">
     <label for="username" class="mdc-floating-label">Username</label>
     <div class="mdc-line-ripple"></div>
   </div>
 
-  <div class="mdc-text-field mdc-text-field--with-leading-icon login-textfield">
+  <div class="mdc-text-field mdc-text-field--with-leading-icon email-textfield textfield">
     <i class="material-icons mdc-text-field__icon" tabindex="0" role="button">email</i>
-    <input type="text" id="username" class="mdc-text-field__input">
-    <label for="username" class="mdc-floating-label">Email</label>
+    <input type="text" id="email" class="mdc-text-field__input">
+    <label for="email" class="mdc-floating-label">Email</label>
     <div class="mdc-line-ripple"></div>
   </div>
 
-  <div class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-textfield">
+  <div class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-textfield textfield">
     <i class="material-icons mdc-text-field__icon">lock</i>
-    <input type="text" id="my-input" class="mdc-text-field__input">
-    <label for="my-input" class="mdc-floating-label">Password</label>
+    <input type="password" id="password" class="mdc-text-field__input">
+    <label for="password" class="mdc-floating-label">Password</label>
     <i class="material-icons mdc-text-field__icon" tabindex="0" role="button"><span class="material-icons">visibility_off</span></i>
     <div class="mdc-line-ripple"></div>
   </div>
 
-  <div class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-textfield">
+  <div class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-confirm-textfield textfield">
     <i class="material-icons mdc-text-field__icon">lock</i>
-    <input type="text" id="my-input" class="mdc-text-field__input">
+    <input type="password" id="my-input" class="mdc-text-field__input">
     <label for="my-input" class="mdc-floating-label">Re-type password</label>
     <i class="material-icons mdc-text-field__icon" tabindex="0" role="button"><span class="material-icons">visibility_off</span></i>
     <div class="mdc-line-ripple"></div>
@@ -68,9 +65,14 @@
 
 <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
 <script>
-  const textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
+  const usernameField = new mdc.textField.MDCTextField(document.querySelector('.username-textfield'));
+  const emailField = new mdc.textField.MDCTextField(document.querySelector('.email-textfield'));
+  const passwordField = new mdc.textField.MDCTextField(document.querySelector('.password-textfield'));
+  const passwordConfirmField = new mdc.textField.MDCTextField(document.querySelector('.password-confirm-textfield'));
+
   const helperText = new mdc.textField.MDCTextFieldHelperText(document.querySelector('.mdc-text-field-helper-text'));
 </script>
+<script type="module" src="js/scripts.js"></script>
 
 </body>
 </html>
