Password visibility button verandert van icoon wanneer password visible wordt.

--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
         <i class="material-icons mdc-text-field__icon">lock</i>
         <input type="password" id="password" class="mdc-text-field__input">
         <label for="password" class="mdc-floating-label">Password</label>
-        <i class="material-icons mdc-text-field__icon" tabindex="0" role="button" id="showPasswordButton"><span class="material-icons">visibility_off</span></i>
+        <i class="material-icons mdc-text-field__icon" tabindex="0" role="button" id="showPasswordButton"><span class="material-icons" id="visibility-icon">visibility_off</span></i>
         <div class="mdc-line-ripple"></div>
     </div>
 
