--- a/signup.html
+++ b/signup.html
@@ -43,15 +43,15 @@
     <i class="material-icons mdc-text-field__icon">lock</i>
     <input type="password" id="password" class="mdc-text-field__input">
     <label for="password" class="mdc-floating-label">Password</label>
-    <i class="material-icons mdc-text-field__icon" tabindex="0" role="button"><span class="material-icons">visibility_off</span></i>
+    <i class="material-icons mdc-text-field__icon" tabindex="0" role="button" id="showPasswordButton"><span class="material-icons" id="visibility-icon">visibility_off</span></i>
     <div class="mdc-line-ripple"></div>
   </div>
 
   <div class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-confirm-textfield textfield">
     <i class="material-icons mdc-text-field__icon">lock</i>
-    <input type="password" id="my-input" class="mdc-text-field__input">
-    <label for="my-input" class="mdc-floating-label">Re-type password</label>
-    <i class="material-icons mdc-text-field__icon" tabindex="0" role="button"><span class="material-icons">visibility_off</span></i>
+    <input type="password" id="password-confirmation" class="mdc-text-field__input">
+    <label for="password-confirmation" class="mdc-floating-label">Confirm password</label>
+    <i class="material-icons mdc-text-field__icon" tabindex="0" role="button" id="showPasswordButton2"><span class="material-icons" id="visibility-icon2">visibility_off</span></i>
     <div class="mdc-line-ripple"></div>
   </div>
 
