Ook bij signup form geregeld dat het wachtwoord zichtbaar en onzichtbaar is bij drukken op oog-icoon. Icoon verandert ook.

--- a/signup.html
+++ b/signup.html
@@ -56,10 +56,11 @@
   </div>
 
   <div class="login-screen-buttons">
-    <button class="mdc-button mdc-button--raised login-button">
+    <a href="index.html">
+    <button class="mdc-button mdc-button--raised login-button" type="submit">
       <span class="mdc-button__label">Sign up</span>
     </button>
-
+    </a>
   </div>
 </div>
 
