Login en Signup script opgedeeld in aparte bestanden, zo staat deze niet meer bij de serviceworker en bij firebase in een Javascript bestand.

--- a/signup.html
+++ b/signup.html
@@ -74,6 +74,7 @@
   const helperText = new mdc.textField.MDCTextFieldHelperText(document.querySelector('.mdc-text-field-helper-text'));
 </script>
 <script type="module" src="js/scripts.js"></script>
-
+<script type="module" src="js/login.js"></script>
+<script type="module" src="js/signup.js"></script>
 </body>
 </html>
