--- a/login.html
+++ b/login.html
@@ -63,6 +63,6 @@
     const helperText = new mdc.textField.MDCTextFieldHelperText(document.querySelector('.mdc-text-field-helper-text'));
 </script>
 <script type="module" src="js/scripts.js"></script>
-
+<script type="module" src="js/login.js"></script>
 </body>
 </html>
