--- a/index.html
+++ b/index.html
@@ -1,89 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
     <!--    Bootstrap icons inladen-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
 
     <!--    Google icons inladen-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
 
     <!--    Material inladen-->
-    <link rel="stylesheet" href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css"
+    />
 
     <!--Manifest inladen voor PWA-->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" />
 
-    <link rel="icon" href="images/printpal512icon.png">
+    <link rel="icon" href="images/printpal512icon.png" />
     <title>Printpal</title>
 
     <script type="module" src="js/scripts.js"></script>
-
-</head>
-<body>
-<div class="container">
-    <img src="images/printpallogo.png" alt="logo" class="logo">
-    <label class="mdc-text-field messageForm">
+  </head>
+  <body>
+    <div class="container">
+      <img src="images/printpallogo.png" alt="logo" class="logo" />
+      <label class="mdc-text-field messageForm">
         <span class="mdc-text-field__ripple"></span>
-        <input type="text" class="mdc-text-field__input" aria-labelledby="my-label" id="messageForm">
+        <input
+          type="text"
+          class="mdc-text-field__input"
+          aria-labelledby="my-label"
+          id="messageForm"
+        />
         <span class="mdc-floating-label" id="my-label">Type your message</span>
         <span class="mdc-line-ripple"></span>
-    </label>
+      </label>
 
-    <button class="mdc-button mdc-button--raised mdc-button--leading sendbutton" id="sendbutton">
+      <button
+        class="mdc-button mdc-button--raised mdc-button--leading sendbutton"
+        id="sendbutton"
+      >
         <span class="mdc-button__ripple"></span>
         <i class="material-icons mdc-button__icon" aria-hidden="true">send</i>
         <span class="mdc-button__label">Send</span>
-    </button>
+      </button>
 
-    <div id="message" class="container">
-        
+      <div id="message" class="container"></div>
+
+      <button
+        class="mdc-button mdc-button--raised mdc-button--leading sendbutton"
+        id="message2"
+      >
+        <span class="mdc-button__ripple"></span>
+        <i class="material-icons mdc-button__icon" aria-hidden="true"
+          >call_received</i
+        >
+        <span class="mdc-button__label">Random message</span>
+      </button>
+
+      <!-- <button id="message2">Get a random message!</button> -->
     </div>
-    <button id="message2">Get a random message!</button>
-    
-</div>
 
-<script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
-<script>
-    const textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
-    const helperText = new mdc.textField.MDCTextFieldHelperText(document.querySelector('.mdc-text-field-helper-text'));
-</script>
+    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+    <script>
+      const textField = new mdc.textField.MDCTextField(
+        document.querySelector(".mdc-text-field")
+      );
+      const helperText = new mdc.textField.MDCTextFieldHelperText(
+        document.querySelector(".mdc-text-field-helper-text")
+      );
+    </script>
 
-<footer>
-    <!--    <p><b>Printpal ©2022</b><br>Baldur van Helvoirt • Mette Ghijsen • Maarten Kasdorp • Wendela Quist</p>-->
-    <div class="taskbar-icons">
+    <footer>
+      <!--    <p><b>Printpal ©2022</b><br>Baldur van Helvoirt • Mette Ghijsen • Maarten Kasdorp • Wendela Quist</p>-->
+      <div class="taskbar-icons">
         <div class="home-icon">
-            <p>
-                <i class="material-icons">home</i>
-            </p>
+          <p>
+            <i class="material-icons">home</i>
+          </p>
         </div>
         <div class="chat-icon">
-            <p>
-                <i class="material-icons">chat</i>
-            </p>
+          <p>
+            <i class="material-icons">chat</i>
+          </p>
         </div>
         <div class="mdc-touch-target-wrapper">
-            <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
-                <div class="mdc-fab__ripple"></div>
-                <span class="material-icons mdc-fab__icon">add</span>
-                <div class="mdc-fab__touch"></div>
-            </button>
+          <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
+            <div class="mdc-fab__ripple"></div>
+            <span class="material-icons mdc-fab__icon">add</span>
+            <div class="mdc-fab__touch"></div>
+          </button>
         </div>
         <div class="settings-icon">
-            <p>
-                <i class="material-icons">settings</i>
-            </p>
+          <p>
+            <i class="material-icons">settings</i>
+          </p>
         </div>
         <div class="account-icon">
-            <p>
-                <i class="material-icons">account_circle</i>
-            </p>
+          <p>
+            <i class="material-icons">account_circle</i>
+          </p>
         </div>
-    </div>
-</footer>
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
