--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
 
     const helperText = new mdc.textField.MDCTextFieldHelperText(document.querySelector('.mdc-text-field-helper-text'));
 </script>
-<script type="module" src="js/scripts.js"></script>
+<script type="module" src="js/pwa.js"></script>
 <script type="module" src="js/login.js"></script>
 </body>
 </html>
