--- a/index.html
+++ b/index.html
@@ -27,4 +27,72 @@
 
 </body>
 
+      <button
+        class="mdc-button mdc-button--raised mdc-button--leading sendbutton"
+        id="message2"
+      >
+        <span class="mdc-button__ripple"></span>
+        <i class="material-icons mdc-button__icon" aria-hidden="true"
+          >call_received</i
+        >
+        <span class="mdc-button__label">Random message</span>
+      </button>
+
+      <button
+      class="mdc-button mdc-button--raised mdc-button--leading sendbutton"
+      id="message3"
+    >
+      <span class="mdc-button__ripple"></span>
+      <i class="material-icons mdc-button__icon" aria-hidden="true"
+        >save</i
+      >
+      <span class="mdc-button__label">Snapshot save</span>
+    </button>
+
+      <!-- <button id="message2">Get a random message!</button> -->
+    </div>
+
+    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+    <script>
+      const textField = new mdc.textField.MDCTextField(
+        document.querySelector(".mdc-text-field")
+      );
+      const helperText = new mdc.textField.MDCTextFieldHelperText(
+        document.querySelector(".mdc-text-field-helper-text")
+      );
+    </script>
+
+    <footer>
+      <!--    <p><b>Printpal ©2022</b><br>Baldur van Helvoirt • Mette Ghijsen • Maarten Kasdorp • Wendela Quist</p>-->
+      <div class="taskbar-icons">
+        <div class="home-icon">
+          <p>
+            <i class="material-icons">home</i>
+          </p>
+        </div>
+        <div class="chat-icon">
+          <p>
+            <i class="material-icons">chat</i>
+          </p>
+        </div>
+        <div class="mdc-touch-target-wrapper">
+          <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
+            <div class="mdc-fab__ripple"></div>
+            <span class="material-icons mdc-fab__icon">add</span>
+            <div class="mdc-fab__touch"></div>
+          </button>
+        </div>
+        <div class="settings-icon">
+          <p>
+            <i class="material-icons">settings</i>
+          </p>
+        </div>
+        <div class="account-icon">
+          <p>
+            <i class="material-icons">account_circle</i>
+          </p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
