START making draw image functionality

--- a/index.html
+++ b/index.html
@@ -4,27 +4,23 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css"/>
     <!--    Bootstrap icons inladen-->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"/>
 
     <!--    Google icons inladen-->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 
     <!--    Material inladen-->
     <link
       rel="stylesheet"
-      href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css"
-    />
+      href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css"/>
 
     <!--Manifest inladen voor PWA-->
     <link rel="manifest" href="manifest.json" />
@@ -43,16 +39,14 @@
           type="text"
           class="mdc-text-field__input"
           aria-labelledby="my-label"
-          id="messageForm"
-        />
+          id="messageForm"/>
         <span class="mdc-floating-label" id="my-label">Type your message</span>
         <span class="mdc-line-ripple"></span>
       </label>
 
       <button
         class="mdc-button mdc-button--raised mdc-button--leading sendbutton"
-        id="sendbutton"
-      >
+        id="sendbutton">
         <span class="mdc-button__ripple"></span>
         <i class="material-icons mdc-button__icon" aria-hidden="true">send</i>
         <span class="mdc-button__label">Send</span>
@@ -62,12 +56,10 @@
 
       <button
         class="mdc-button mdc-button--raised mdc-button--leading sendbutton"
-        id="message2"
-      >
+        id="message2">
         <span class="mdc-button__ripple"></span>
         <i class="material-icons mdc-button__icon" aria-hidden="true"
-          >call_received</i
-        >
+          >call_received</i>
         <span class="mdc-button__label">Random message</span>
       </button>
 
