Errorcodes toegevoegd aan loginscherm, en comments bijgewerkt

--- a/signup.html
+++ b/signup.html
@@ -58,7 +58,7 @@
       <div class="mdc-line-ripple"></div>
     </div>
 
-    <p id="error-textfield" class="error-textfield">foutmelding</p>
+    <p id="error-textfield" class="error-textfield"></p>
 
     <div class="login-screen-buttons">
       <button class="mdc-button mdc-button--raised login-button" type="button" id="signup-button">
