--- a/index.html
+++ b/index.html
@@ -28,36 +28,39 @@
     <img src="images/printpallogo.png" alt="logo" class="logo">
 
     <form>
-    <div class="mdc-text-field mdc-text-field--with-leading-icon login-textfield textfield">
-        <i class="material-icons mdc-text-field__icon" tabindex="0" role="button">email</i>
-        <input type="email" id="email" class="mdc-text-field__input">
-        <label for="email" class="mdc-floating-label">Email</label>
-        <div class="mdc-line-ripple"></div>
-    </div>
+        <div class="mdc-text-field mdc-text-field--with-leading-icon login-textfield textfield">
+            <i class="material-icons mdc-text-field__icon" tabindex="0" role="button">email</i>
+            <input type="email" id="email" class="mdc-text-field__input">
+            <label for="email" class="mdc-floating-label">Email</label>
+            <div class="mdc-line-ripple"></div>
+        </div>
 
-    <div class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-textfield textfield">
-        <i class="material-icons mdc-text-field__icon">lock</i>
-        <input type="password" id="password" class="mdc-text-field__input">
-        <label for="password" class="mdc-floating-label">Password</label>
-        <i class="material-icons mdc-text-field__icon" tabindex="0" role="button" id="showPasswordButton"><span class="material-icons" id="visibility-icon">visibility_off</span></i>
-        <div class="mdc-line-ripple"></div>
-    </div>
+        <div class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--with-trailing-icon password-textfield textfield">
+            <i class="material-icons mdc-text-field__icon">lock</i>
+            <input type="password" id="password" class="mdc-text-field__input">
+            <label for="password" class="mdc-floating-label">Password</label>
+            <i class="material-icons mdc-text-field__icon" tabindex="0" role="button" id="showPasswordButton"><span
+                    class="material-icons" id="visibility-icon">visibility_off</span></i>
+            <div class="mdc-line-ripple"></div>
+        </div>
 
-    <div class="login-screen-buttons">
-        <button class="mdc-button mdc-button--raised login-button" type="button" id="login-button">
-            <span class="mdc-button__label">Login</span>
-        </button>
+        <p id="error-textfield" class="error-textfield"></p>
 
-        <button class="mdc-button mdc-button--outlined signup-button" type="button" id="signup-button">
-            <span class="mdc-button__ripple"></span>
-            <span class="mdc-button__label">Sign up</span>
-        </button>
-    </div>
+        <div class="login-screen-buttons">
+            <button class="mdc-button mdc-button--raised login-button" type="button" id="login-button">
+                <span class="mdc-button__label">Login</span>
+            </button>
+
+            <button class="mdc-button mdc-button--outlined signup-button" type="button" id="signup-button">
+                <span class="mdc-button__ripple"></span>
+                <span class="mdc-button__label">Sign up</span>
+            </button>
+        </div>
     </form>
 </div>
 
 <script src="js/pwa.js"></script>
-<script  src="js/login.js"></script>
+<script src="js/login.js"></script>
 <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
 <script>
     const loginField = new mdc.textField.MDCTextField(document.querySelector('.login-textfield'));
