--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
             </button>
         </div>
     </form>
+
+<!--    <div class="google-btn" id="google-signup-button">-->
+<!--        <div class="google-icon-wrapper">-->
+<!--            <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>-->
+<!--        </div>-->
+<!--        <p class="btn-text"><b>Sign in with google</b></p>-->
+<!--    </div>-->
 </div>
 
 <script src="js/pwa.js"></script>
