--- a/home.html
+++ b/home.html
@@ -1,73 +1,176 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+      viewport-fit="cover"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
     <!--    Bootstrap icons inladen-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
 
     <!--    Google icons inladen-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
 
     <!--    Material inladen-->
-    <link rel="stylesheet" href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css"
+    />
 
     <!--Manifest inladen voor PWA-->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" />
 
-    <link rel="icon" href="images/printpal512icon.png">
+    <link rel="icon" href="images/printpal512icon.png" />
     <title>Printpal</title>
 
     <script type="module" src="js/pwa.js"></script>
     <script type="module" src="js/sendmessage.js"></script>
-</head>
-<body>
-<div class="container">
-    <img src="images/printpallogo.png" alt="logo" class="logo">
-        <label class="mdc-text-field messageForm">
-            <span class="mdc-text-field__ripple"></span>
-            <input type="text" class="mdc-text-field__input" aria-labelledby="my-label" id="messageForm">
-            <span class="mdc-floating-label" id="my-label">Type your message</span>
-            <span class="mdc-line-ripple"></span>
-        </label>
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <div class="left">
+          <img src="images/printpallogo.png" alt="logo" class="logo" />
+        </div>
+        <div class="right">
+          <div class="profileavatar"></div>
+        </div>
+      </div>
 
-        <button class="mdc-button mdc-button--raised mdc-button--leading sendbutton" id="sendbutton">
-            <span class="mdc-button__ripple"></span>
-            <i class="material-icons mdc-button__icon" aria-hidden="true">send</i>
-            <span class="mdc-button__label">Send</span>
-        </button>
-</div>
+      <div class="titletext">
+        <h1>Hello, <span class="bold">Test</span> 👋</h1>
+      </div>
 
-<script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+      <!-- <label class="mdc-text-field messageForm">
+        <span class="mdc-text-field__ripple"></span>
+        <input
+          type="text"
+          class="mdc-text-field__input"
+          aria-labelledby="my-label"
+          id="messageForm"
+        />
+        <span class="mdc-floating-label" id="my-label">Type your message</span>
+        <span class="mdc-line-ripple"></span>
+      </label> -->
+      <!-- <button
+        class="mdc-button mdc-button--raised mdc-button--leading sendbutton"
+        id="sendbutton"
+      >
+        <span class="mdc-button__ripple"></span>
+        <i class="material-icons mdc-button__icon" aria-hidden="true">send</i>
+        <span class="mdc-button__label">You have 2 new prints</span>
+      </button>
+    </div> -->
+      <button
+        class="mdc-button mdc-button--raised mdc-button--leading sendbutton"
+        id="sendbutton"
+      >
+        <span class="mdc-button__ripple"></span>
+        <i class="material-icons mdc-button__icon" aria-hidden="true">send</i>
+        <span class="mdc-button__label">You have 2 new prints</span>
+      </button>
 
-<script>
-    const textField = new mdc.textField.MDCTextField(document.querySelector('.mdc-text-field'));
-    const helperText = new mdc.textField.MDCTextFieldHelperText(document.querySelector('.mdc-text-field-helper-text'));
-</script>
+      <section id="historysection">
+          <div class="left">
+            <h2>History</h2>
+          </div>
+          <div class="right">
+              <h2 class="green">See all</h2>
+          </div>
+        <!-- <div class="card">
+          <div class="cardcontainer">
+            <div class="griditem">
+              <img src="images/avatar.png" />
+            </div>
+            <div class="griditem1">
+              <h3>Motivational Message</h3>
+              <p>Laura Lopez</p>
+            </div>
+            <div class="griditem">
+              <p>18:35</p>
+            </div>
+          </div>
+        </div> -->
 
-<footer>
-    <div class="taskbar-icons">
+        <div class="card">
+            <div class="grid-item"><img src="images/avatar.png" /></div>
+            <div class="grid-item">
+              <h3>Motivational Message</h3>
+              <p>Laura Lopez</p>
+            </div>
+            <div class="grid-item"><p>18:35</p></div>
+          </div>
+          <div class="card">
+            <div class="grid-item"><img src="images/avatar.png" /></div>
+            <div class="grid-item">
+              <h3>Motivational Message</h3>
+              <p>Laura Lopez</p>
+            </div>
+            <div class="grid-item"><p>18:35</p></div>
+          </div>
+          <div class="card">
+            <div class="grid-item"><img src="images/avatar.png" /></div>
+            <div class="grid-item">
+              <h3>Motivational Message</h3>
+              <p>Laura Lopez</p>
+            </div>
+            <div class="grid-item"><p>18:35</p></div>
+          </div>
+          <div class="card">
+            <div class="grid-item"><img src="images/avatar.png" /></div>
+            <div class="grid-item">
+              <h3>Motivational Message</h3>
+              <p>Laura Lopez</p>
+            </div>
+            <div class="grid-item"><p>18:35</p></div>
+          </div>
+        </div>
+      </section>
+      
+
+
+
+    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+
+    <script>
+      const textField = new mdc.textField.MDCTextField(
+        document.querySelector(".mdc-text-field")
+      );
+      const helperText = new mdc.textField.MDCTextFieldHelperText(
+        document.querySelector(".mdc-text-field-helper-text")
+      );
+    </script>
+
+    <footer>
+      <div class="taskbar-icons">
         <div class="home-icon">
-            <p>
-                <i class="material-icons">home</i>
-            </p>
+          <p>
+            <i class="material-icons">home</i>
+          </p>
         </div>
         <div class="mdc-touch-target-wrapper">
-            <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
-                <div class="mdc-fab__ripple"></div>
-                <span class="material-icons mdc-fab__icon">add</span>
-                <div class="mdc-fab__touch"></div>
-            </button>
+          <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
+            <div class="mdc-fab__ripple"></div>
+            <span class="material-icons mdc-fab__icon">add</span>
+            <div class="mdc-fab__touch"></div>
+          </button>
         </div>
         <div class="chat-icon">
-            <p>
-                <i class="material-icons">chat</i>
-            </p>
+          <p>
+            <i class="material-icons">chat</i>
+          </p>
         </div>
-    </div>
-</footer>
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
