Eerste opzet voor achievements toegevoegd aan profiel

--- a/profile.html
+++ b/profile.html
@@ -50,11 +50,21 @@
             </div>
         </div>
 
-        <a href="">
-            <span class="edit-profile-btn">
+        <a href="" class="edit-profile-btn">
+            <span>
                 Edit profile
             </span>
         </a>
+
+        <h2>Achievements</h2>
+        <div class="achievements-container">
+            <div class="achievement">
+                <div class="achievement-icon">
+                </div>
+                <h1 id="achievement-name"></h1>
+                <p id="achievement-desc"></p>
+            </div>
+        </div>
     </div>
 </div>
 
