--- a/profile.html
+++ b/profile.html
@@ -59,10 +59,43 @@
         <h2>Achievements</h2>
         <div class="achievements-container">
             <div class="achievement">
-                <div class="achievement-icon">
+                <div class="achievement-icon-container">
+                    <div class="achievement-icon newbie">
+                        <i class="material-icons">new_releases</i>
+                    </div>
+                    <h1 id="achievement-name">Newbie</h1>
+                    <p id="achievement-desc">Your account is one day old</p>
                 </div>
-                <h1 id="achievement-name"></h1>
-                <p id="achievement-desc"></p>
+            </div>
+
+            <div class="achievement">
+                <div class="achievement-icon-container">
+                    <div class="achievement-icon artist">
+                        <i class="material-icons">draw</i>
+                    </div>
+                    <h1 id="achievement-name">Artist</h1>
+                    <p id="achievement-desc">Make your first drawing</p>
+                </div>
+            </div>
+
+            <div class="achievement">
+                <div class="achievement-icon-container">
+                    <div class="achievement-icon a-new-friend">
+                        <i class="material-icons">people</i>
+                    </div>
+                    <h1 id="achievement-name">A new friend</h1>
+                    <p id="achievement-desc">Add your first friend</p>
+                </div>
+            </div>
+
+            <div class="achievement">
+                <div class="achievement-icon-container">
+                    <div class="achievement-icon timetracer">
+                        <i class="material-icons">lock_clock</i>
+                    </div>
+                    <h1 id="achievement-name">Timetracer</h1>
+                    <p id="achievement-desc">Change preferred print time</p>
+                </div>
             </div>
         </div>
     </div>
