Back en settings-knop toegevoegd

--- a/profile.html
+++ b/profile.html
@@ -25,6 +25,14 @@
 </head>
 <body>
 <div class="container">
+    <a href="" class="back-btn">
+        <span class="material-icons">arrow_back_ios_new</span>
+    </a>
+
+    <a href="" class="settings-btn">
+        <span class="material-icons">settings</span>
+    </a>
+
     <div class="gradient"></div>
     <img class="profile-icon"  src="images/profile-placeholder.png" alt="profile-picture">
     <div class="white-background">
