--- a/profile.html
+++ b/profile.html
@@ -24,12 +24,12 @@
     <script type="module" src="js/pwa.js"></script>
 </head>
 <body>
-<div class="container">
+<div class="profile-container">
     <a href="" class="back-btn">
         <span class="material-icons">arrow_back_ios_new</span>
     </a>
 
-    <a href="" class="settings-btn">
+    <a href="settings.html" class="settings-btn">
         <span class="material-icons">settings</span>
     </a>
 
