Begin gemaakt aan preferences scherm. Script geschreven voor selecteren en deselecteren van categoriën.

--- a/settings.html
+++ b/settings.html
@@ -37,122 +37,122 @@
         <h2>Preferences</h2>
     </div>
 
-    <div class="setting">
+    <a href="preferences.html" class="setting">
         <div class="icon">
             <span class="material-icons">edit</span>
         </div>
         <div class="settings-title">
             <h3>Edit preferences</h3>
         </div>
-    </div>
+    </a>
     <div class="line"></div>
 
     <div class="subtitle">
         <h2>Personal details</h2>
     </div>
 
-    <div class="setting">
+    <a href="" class="setting">
         <div class="icon">
             <span class="material-icons">account_circle</span>
         </div>
         <div class="settings-title">
             <h3>Change username</h3>
         </div>
-    </div>
+    </a>
     <div class="line"></div>
 
-    <div class="setting">
+    <a href="" class="setting">
         <div class="icon">
             <span class="material-icons">email</span>
         </div>
         <div class="settings-title">
             <h3>Change email</h3>
         </div>
-    </div>
+    </a>
     <div class="line"></div>
 
-    <div class="setting">
+    <a href="" class="setting">
         <div class="icon">
             <span class="material-icons">lock</span>
         </div>
         <div class="settings-title">
             <h3>Change password</h3>
         </div>
-    </div>
+    </a>
     <div class="line"></div>
 
     <div class="subtitle">
         <h2>Privacy</h2>
     </div>
 
-    <div class="setting">
+    <a href="" class="setting">
         <div class="icon">
             <span class="material-icons">block</span>
         </div>
         <div class="settings-title">
             <h3>Blocked users</h3>
         </div>
-    </div>
+    </a>
     <div class="line"></div>
 
-    <div class="setting">
+    <a href="" class="setting">
         <div class="icon">
             <span class="material-icons">chat</span>
         </div>
         <div class="settings-title">
             <h3>Chats</h3>
         </div>
-    </div>
+    </a>
     <div class="line"></div>
 
     <div class="subtitle">
         <h2>Support</h2>
     </div>
 
-    <div class="setting">
+    <a href="" class="setting">
         <div class="icon">
             <span class="material-icons">help</span>
         </div>
         <div class="settings-title">
             <h3>I need help</h3>
         </div>
-    </div>
+    </a>
     <div class="line"></div>
 
-    <div class="setting">
+    <a href="" class="setting">
         <div class="icon">
             <span class="material-icons">gavel</span>
         </div>
         <div class="settings-title">
             <h3>Terms of service</h3>
         </div>
-    </div>
+    </a>
     <div class="line"></div>
 
 
-</div>
-
-<!--Navbar-->
-<footer>
-    <div class="taskbar-icons">
-        <div class="home-icon">
-            <p>
-                <i class="material-icons">home</i>
-            </p>
-        </div>
-        <div class="mdc-touch-target-wrapper">
-            <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
-                <div class="mdc-fab__ripple"></div>
-                <span class="material-icons mdc-fab__icon">add</span>
-                <div class="mdc-fab__touch"></div>
-            </button>
-        </div>
-        <div class="chat-icon">
-            <p>
-                <i class="material-icons">chat</i>
-            </p>
-        </div>
     </div>
-</footer>
+
+    <!--Navbar-->
+    <footer>
+        <div class="taskbar-icons">
+            <div class="home-icon">
+                <p>
+                    <i class="material-icons">home</i>
+                </p>
+            </div>
+            <div class="mdc-touch-target-wrapper">
+                <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
+                    <div class="mdc-fab__ripple"></div>
+                    <span class="material-icons mdc-fab__icon">add</span>
+                    <div class="mdc-fab__touch"></div>
+                </button>
+            </div>
+            <div class="chat-icon">
+                <p>
+                    <i class="material-icons">chat</i>
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
