Preferences scherm afgemaakt.

--- a/preferences.html
+++ b/preferences.html
@@ -36,13 +36,22 @@
   <div class="subtitle">
     <h2>Time</h2>
     <p>Edit the time when you would like to recieve
-      messages</p>
+      messages.</p>
   </div>
+
+  <div class="time-form">
+    <form action="">
+      <input type="time" id="appt" name="appt">
+<!--      <input type="submit" class="submit-time-btn">-->
+    </form>
+  </div>
+
+  <div class="line"></div>
 
   <div class="subtitle">
     <h2>Category</h2>
     <p>Edit the category in which you would like
-      to receive messages</p>
+      to receive messages.</p>
   </div>
 
   <div class="categories">
@@ -55,7 +64,17 @@
     </div>
 
     <div class="category" id="category-item-3">
+      <p>Meme</p>
+    </div>
+  </div>
+
+  <div class="categories">
+    <div class="category" id="category-item-4">
       <p>Nice message</p>
+    </div>
+
+    <div class="category" id="category-item-5">
+      <p>Storytime</p>
     </div>
   </div>
 </div>
