--- a/profile.html
+++ b/profile.html
@@ -71,8 +71,8 @@
                     <div class="achievement-icon newbie">
                         <i class="material-icons">new_releases</i>
                     </div>
-                    <h1 id="achievement-name">Newbie</h1>
-                    <p id="achievement-desc">Your account is one day old</p>
+                    <h1 id="achievement-name-1">Newbie</h1>
+                    <p id="achievement-desc-1">Your account is one day old</p>
                 </div>
             </div>
 
@@ -81,8 +81,8 @@
                     <div class="achievement-icon artist">
                         <i class="material-icons">draw</i>
                     </div>
-                    <h1 id="achievement-name">Artist</h1>
-                    <p id="achievement-desc">Make your first drawing</p>
+                    <h1 id="achievement-name-2">Artist</h1>
+                    <p id="achievement-desc-2">Make your first drawing</p>
                 </div>
             </div>
 
@@ -91,8 +91,8 @@
                     <div class="achievement-icon a-new-friend">
                         <i class="material-icons">people</i>
                     </div>
-                    <h1 id="achievement-name">A new friend</h1>
-                    <p id="achievement-desc">Add your first friend</p>
+                    <h1 id="achievement-name-3">A new friend</h1>
+                    <p id="achievement-desc-3">Add your first friend</p>
                 </div>
             </div>
 
@@ -101,8 +101,8 @@
                     <div class="achievement-icon timetracer">
                         <i class="material-icons">lock_clock</i>
                     </div>
-                    <h1 id="achievement-name">Timetracer</h1>
-                    <p id="achievement-desc">Change preferred print time</p>
+                    <h1 id="achievement-name-4">Timetracer</h1>
+                    <p id="achievement-desc-4">Change preferred print time</p>
                 </div>
             </div>
         </div>
