Save knop toegevoegd op preferences scherm

--- a/preferences.html
+++ b/preferences.html
@@ -42,7 +42,6 @@
   <div class="time-form">
     <form action="">
       <input type="time" id="appt" name="appt">
-<!--      <input type="submit" class="submit-time-btn">-->
     </form>
   </div>
 
@@ -76,6 +75,10 @@
     <div class="category" id="category-item-5">
       <p>Storytime</p>
     </div>
+  </div>
+
+  <div class="btn-save-wrapper">
+  <a href="settings.html" class="save-preferences-btn">Save preferences</a>
   </div>
 </div>
 
