--- a/receivedprints.html
+++ b/receivedprints.html
@@ -87,7 +87,8 @@
         </p>
       </div>
       <div class="mdc-touch-target-wrapper">
-        <button class="mdc-fab mdc-fab--mini mdc-fab--touch">
+        <button class="mdc-fab mdc-fab--mini mdc-fab--touch" style="background: linear-gradient(90deg, #07f2b0 0%, #06bfbf 100%)"
+        >
           <div class="mdc-fab__ripple"></div>
           <span class="material-icons  mdc-fab__icon">add</span>
           <div class="mdc-fab__touch"></div>
