--- a/history.html
+++ b/history.html
@@ -39,7 +39,7 @@
     </a>
 
     <div class="titletext">
-        <h1>History</h1>
+        <h1 style="margin-top:0">History</h1>
       </div>
 
     <section id="history">
